--- a/new-webpage.html
+++ b/new-webpage.html
@@ -1,7 +1,7 @@
 <html>
-	<head><title>This is my test page.</title></head>
+	<head><title>New Page</title></head>
 	<body>
-		<h1>Hello, World!</h1>
+		<h1>New Web Page</h1>
 		<p>Welcome to this webpage.</p>
 		<p>This is a new <a href="new-webpage.html">webpage.</a></p>
 	</body>
