removed new webpage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<body>
 		<h1>Hello, World!</h1>
 		<p>Welcome to this webpage.</p>
-		<p>This is a new <a href="new-webpage.html">webpage.</a></p>
+		<p>This is a new <a href="">webpage.</a></p>
 	</body>
 </html>
