--- a/asg-1/index.html
+++ b/asg-1/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head><title>This is my test page.</title></head>
 	<body>
-		<h1>Hello, World!</h1>
+		<h1>Asg 1 page</h1>
 		<p>Welcome to this webpage.</p>
 		<p>This is a new <a href="new-webpage.html">webpage.</a></p>
 	</body>
